--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,111 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+:root {
+    --white: #f0f0f0;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
-*/
+html {
+    font-size: 62.5%;
+}
+
+body {
+    background-color: #e6e6e6;
+    min-height: 100vh;
+    background-color: #0093E9;
+    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    font-family: 'Roboto', sans-serif;
+    color: var(--white);
+}
+
+.home-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.main-container {
+    width: 90%;
+    max-width: 400px;
+    padding: 20px;
+    margin: 0;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff28;
+    border: 1px solid #fff;
+    border-radius: 10px;
+}
+
+h1 {
+    margin-bottom: 30px;
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+.new-task-input {
+    outline: none;
+    border: none;
+    width: 100%;
+    height: 35px;
+    background: transparent;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #fff;
+    padding: 0 10px;
+    font-size: 1.7rem;
+    color: inherit;
+}
+
+.new-task-input::placeholder {
+    color: inherit;
+    opacity: 80%;
+    font-size: 1.7rem;
+}
+
+.todo {
+    width: 100%;
+    height: 35px;
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: transparent;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+
+.todo_content {
+    margin: 0;
+    margin-left: 10px;
+    font-size: 1.7rem;
+}
+
+.todo_delete {
+    margin: 0;
+    width: 35px;
+    height: 100%;
+    cursor: pointer;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 200ms;
+}
+
+.todo:hover > .todo_delete {
+    opacity: 100;
+}
+
+.info {
+    margin: 20px 0;
+    font-size: 1.7rem;
+}
